fixing text and spacing

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 
     <nav id="navbar" class="p-0 m-0">
       <div class="toggle-nav align-self-center p-0">
-        <span class="hamburger align-self-center p-0"><i class="fas fa-bars align-self-center"></i></span>
+        <span class="hamburger align-self-center fas fa-bars align-self-center py-3"></span>
       </div>
         <ul id="navbar-ul" class="">
           <li class=""><a class="text-uppercase" href="#cover">Home</a></li>
@@ -67,7 +67,7 @@
 
   <!-- __________________________________ SECTION 2 __________________________________ -->
 
-  <div class="section container-fluid px-5 py-0" id="oCasamento">
+  <div class="section container-fluid px-5 py-0 bkg" id="oCasamento">
 
     <h1 class="mb-0 mt-5 pt-5 pb-3 pl-5 bkg">O Casamento</h1>
     <div id="oCasamento-row1" class="row pt-5 text-center bkg mx-0 px-4">
@@ -76,14 +76,14 @@
         <img class="icon pb-3" src="assets/icons/church.png" alt="Icone igreja"/>
         <h4 class="sans-h py-3">Cerimônia 16:30</h4>
         <p class="subtitle">Igreja Sagrada Família<br />
-          <span class="sans">Rua José do Patrocínio, 954 - Cidade Baixa</span><br /><a href="https://goo.gl/maps/wCh1HXf6w752">Veja no mapa</a></p>
+          <span class="sans">Rua José do Patrocínio, 954 - Cidade Baixa</span><br /><a href="https://goo.gl/maps/wCh1HXf6w752" target="_blank">Veja no mapa</a></p>
       </div>
       <div class="col-md-2 ml-md-auto"></div>
       <div class="col-md-4 ml-md-auto">
         <img class="icon pb-3" src="assets/icons/glass.png" alt="Icone taças"/>
         <h4 class="sans-h py-3">Recepção 18:00</h4>
         <p class="subtitle">Sociedade de Engenharia do RS<br />
-          <span class="sans">Avenida Coronel Marcos, 163 - Pedra Redonda</span><br /><a href="https://goo.gl/maps/5vE95KiFVz42">Veja no mapa</a></p>
+          <span class="sans">Avenida Coronel Marcos, 163 - Pedra Redonda</span><br /><a href="https://goo.gl/maps/5vE95KiFVz42" target="_blank">Veja no mapa</a></p>
       </div>
       <div class="col-md-1 ml-md-auto"></div>
     </div>
@@ -100,9 +100,9 @@
       <div class="col-md-4 ml-md-auto">
         <img class="icon py-3" src="assets/icons/letter.png" alt="Icone carta"/>
         <h4 class="sans-h py-3">Confirmação de Presença</h4>
-        <p class="subtitle">Até 28 de Fevereiro</br>
-          <span class="sans">A confirmação de presença será até o dia 28/02/2019.<br />
-            <a href="https://marieluis.zankyou.com/br/seus-convidados/request-rsvp-by-guest">Confirmar presença</a></span></p>
+        <p class="subtitle">Até 15 de Março</br>
+          <span class="sans">A confirmação de presença será até o dia 15/03/2019.<br />
+            <a href="https://marieluis.zankyou.com/br/seus-convidados/request-rsvp-by-guest" target="_blank">Confirmar presença</a></span></p>
       </div>
       <div class="col-md-1 ml-md-auto"></div>
     </div>
@@ -110,7 +110,7 @@
   </div>
 
   <!-- _____________________________ SECTION 3 _____________________________ -->
-  <div class="section container-fluid px-5" id="listaPresentes">
+  <div class="section container-fluid px-5 pt-3" id="listaPresentes">
 
     <h1 class="pt-5 pl-5">Lista de Presentes</h1>
     <div class="row px-5 py-4">
@@ -126,7 +126,7 @@
        <p>Nos presentear, porém, pode ser divertido. Decidimos criar uma lista de presentes virtual com cotas de luas de mel,
           que serão convertidas em dinheiro.
        </p>
-          <button type="button" onclick="location.href=''" class="btn btn_presente sans-bold pink mt-2">Presenteie-nos</button>
+          <a class="btn btn_presente sans-bold pink mt-2" href="https://marieluis.zankyou.com/br" target="_blank">Presenteie-nos</a>
         </div>
         <div class="col-md-2 ml-md-auto"></div>
         <div class="col-md-4 ml-md-auto align-self-center">
