--- a/padrinhos-madrinhas.html
+++ b/padrinhos-madrinhas.html
@@ -26,7 +26,7 @@
             <span class="hamburger align-self-center p-0"><i class="fas fa-bars align-self-center"></i></span>
           </div>
             <ul id="navbar-ul" class="">
-              <li class=""><a class="text-uppercase" href="home.html#cover">Home</a></li>
+              <li class=""><a class="text-uppercase" href="http://test.marieluis.net">Home</a></li>
               <li class=""><a class="text-uppercase" href="#madrinhas_padrinhos">Instruções</a></li>
               <li class=""><a class="text-uppercase" href="#madrinhas_padrinhos2">No dia</a></li>
             </ul>
@@ -71,7 +71,7 @@
     <div class="row px-5 ">
 
     <div class="row pt-5">
-      <div class="col-md-6 ml-md-auto pr-3">
+      <div class="col-md-6 ml-md-auto px-3">
         <h2 class="sans-bold pb-5">Madrinhas</h2>
         <p class="sans">
             Antes de mais nada queremos que vocês se sintam lindas, cada uma
@@ -81,7 +81,7 @@
         </p>
 
       </div>
-      <div class="col-md-6 ml-md-auto pl-3">
+      <div class="col-md-6 ml-md-auto px-3">
         <h2 class="sans-bold pb-5">Padrinhos</h2>
         <p class="sans">
             Para que vocês fiquem ainda mais bonitos, escolhemos padronizar os trajes dos padrinhos.
