Fixing home link on padrinhos page

--- a/padrinhos-madrinhas.html
+++ b/padrinhos-madrinhas.html
@@ -27,7 +27,7 @@
       </div>
         <ul id="navbar-ul" class="">
             <ul id="navbar-ul" class="">
-              <li class=""><a class="text-uppercase" href="http://test.marieluis.net">Home</a></li>
+              <li class=""><a class="text-uppercase" href="home.html">Home</a></li>
               <li class=""><a class="text-uppercase" href="#madrinhas_padrinhos">Instruções</a></li>
               <li class=""><a class="text-uppercase" href="#madrinhas_padrinhos2">No dia</a></li>
             </ul>
