--- a/home.html
+++ b/home.html
@@ -75,14 +75,14 @@
       <div class="col-md-4 ml-md-auto">
         <img class="icon pb-3" src="assets/icons/church.png" alt="Icone igreja"/>
         <h4 class="sans-h py-3">Cerimônia 16:30</h4>
-        <p class="subtitle">Igreja Sagrada Família<br />
+        <p class="subtitle font-weight-bold">Igreja Sagrada Família<br />
           <span class="sans">Rua José do Patrocínio, 954 - Cidade Baixa</span><br /><a href="https://goo.gl/maps/9AG8S3UPwfm" target="_blank">Veja no mapa</a></p>
       </div>
       <div class="col-md-2 ml-md-auto"></div>
       <div class="col-md-4 ml-md-auto">
         <img class="icon pb-3" src="assets/icons/glass.png" alt="Icone taças"/>
         <h4 class="sans-h py-3">Recepção 18:00</h4>
-        <p class="subtitle">Sociedade de Engenharia do RS<br />
+        <p class="subtitle font-weight-bold">Sociedade de Engenharia do RS<br />
           <span class="sans">Avenida Coronel Marcos, 163 - Pedra Redonda</span><br /><a href="https://goo.gl/maps/GuDsAjbNx5C2" target="_blank">Veja no mapa</a></p>
       </div>
       <div class="col-md-1 ml-md-auto"></div>
@@ -92,7 +92,7 @@
       <div class="col-md-4 ml-md-auto">
         <img class="icon py-3" src="assets/icons/hat.png" alt="Icone chapéu"/>
         <h4 class="sans-h py-3">Dress Code</h4>
-        <p class="subtitle">Traje Social ou Passeio Completo<br />
+        <p class="subtitle font-weight-bold">Traje Social ou Passeio Completo<br />
           <span class="sans">Terno e gravata para os homens e vestidos de
             tecidos mais nobres para as mulheres</span></p>
       </div>
@@ -100,7 +100,7 @@
       <div class="col-md-4 ml-md-auto">
         <img class="icon py-3" src="assets/icons/letter.png" alt="Icone carta"/>
         <h4 class="sans-h py-3">Confirmação de Presença</h4>
-        <p class="subtitle">Até 15 de Março</br>
+        <p class="subtitle font-weight-bold">Até 15 de Março</br>
           <span class="sans">A confirmação de presença será até o dia 15/03/2019.<br />
             <a href="https://marieluis.zankyou.com/br/seus-convidados/request-rsvp-by-guest" target="_blank">Confirmar presença</a></span></p>
       </div>
