--- a/home.html
+++ b/home.html
@@ -101,8 +101,8 @@
         <img class="icon py-3" src="assets/icons/letter.png" alt="Icone carta"/>
         <h4 class="sans-h py-3">Confirmação de Presença</h4>
         <p class="subtitle font-weight-bold">Até 15 de Março</br>
-          <span class="sans">A confirmação de presença será até o dia 15/03/2019.<br />
-            <a href="https://marieluis.zankyou.com/br/seus-convidados/request-rsvp-by-guest" target="_blank">Confirmar presença</a></span></p>
+          <span class="sans">A confirmação de presença será até o dia 15/03/2019.</span><br />
+            <a href="https://marieluis.zankyou.com/br/seus-convidados/request-rsvp-by-guest" target="_blank">Confirmar presença</a></p>
       </div>
       <div class="col-md-1 ml-md-auto"></div>
     </div>
